# flask-cblueprint

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg  setup.py
flask_cblueprint/: __about__.py  __init__.py  config.py  flask_cblueprint.py
flask_cblueprint/__boilerplate__/views/flask_view/: view.py.template
flask_cblueprint/commands/: create_blueprint.py  list_blueprint.py
flask_cblueprint/utils/: list.py  string.py  validate.py
sample/: app.py  config.py
src/flask_cblueprint/__boilerplate__/models/: default.py.template
src/flask_cblueprint/__boilerplate__/views/flask_mv/: routes.py.template  view.py.template
src/flask_cblueprint/__boilerplate__/views/flask_view/: routes.py.template
src/flask_cblueprint/__boilerplate__/views/standard/: routes.py.template
